# window

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: Win32_window.h  Win32_window_polymorph.h  autoWindow.h  inputs.h  sharedAbstration.h  window.h  windowUtils.h
include/Win32/: Win32_window.h  Win32_window_polymorph.h
src/: Win32_window.cpp
tests/: CMakeLists.txt  main.cpp  manual_test.cpp
